--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,23 +3,31 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
+        <h2>Tell us about your dog!</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+            <label for="dog-name">Your Dog</label>
+            <input type="text" id="dog-name" class="form-control" aria-describedby="dog-name" placeholder="Enter Dog Name">
           </div>
           <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+            <label for="dog-birthdate">Dog Birthdate</label>
+            <textarea class="form-control" id="dog-birthdate" aria-describedby="dog-birthdate" placeholder="Enter Dog Birthdate"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="dog-sex">Dog Sex</label>
+            <textarea class="form-control" id="dog-sex" aria-describedby="dog-sex" placeholder="Enter Dog Sex"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="dog-breed">Dog Breed</label>
+            <textarea class="form-control" id="dog-breed" aria-describedby="dog-breed" placeholder="Enter Dog Breed"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
+        <h3>Dogs:</h3>
+        <ul id="dog-list" class="list-group">
+          {{#each dogs}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+            <a href="dog/{{this.id}}">{{this.dogName}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
