--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
             <label for="dog-breed">Dog Breed</label>
             <textarea class="form-control" id="dog-breed" aria-describedby="dog-breed" placeholder="Enter Dog Breed"></textarea>
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <button id="submit-dog" class="btn btn-primary float-right">Submit</button>
         </form>
         <h3>Dogs:</h3>
         <ul id="dog-list" class="list-group">
