Centered Breed Information

--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -7,7 +7,6 @@
       <h1 id="dog-name">{{dog.dogName}}</h1>
       <p id="dog-birthday">{{dog.birthdate}}</p>
       <p id="dog-sex">{{dog.sex}}</p>
-      <a href="/">← Back To Home</a>
     </div>
   </div>
 
@@ -39,15 +38,14 @@
         </div>
         <div id="breed_data">
         <p>Breed Data</p>
-        <table id="breed_data_table"></table>
+        <table id="breed_data_table" class="text-right "></table>
         </div>
-    </div>
-    
+      </div>
 
       <div class="col card mb-4">
-        <h1 class="card-header">Breed Health Issues</h1>
-        <p id="breed-health card-body">Health info {{example.health}}</p>
-        <a href="#">links for more info on health issues</a>
+          <h1 class="card-header">Breed Health Issues</h1>
+          <p id="breed-health card-body">Health info {{example.health}}</p>
+          <a href="#">links for more info on health issues</a>
       </div>
   </div>
    
