--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,8 +15,8 @@
                 <INPUT type="submit" id="button_dog" value="Diary">
                 <!-- <div id="buttonText">Fido's Diary</div></button> -->
 
-                <!--BUTTON: New Pet Profile-->
-                <INPUT type="submit" id="button_addnewpet" value="Add New Pet Profile"></button>
+                <!--BUTTON: Add New Pet-->
+                <INPUT type="submit" id="button_addnewpet" value="Add New Dog"></button>
 
                 {{!-- Modal: populate new-pet form --}}
                 <div id="profileModal" class="modal2">
@@ -55,14 +55,6 @@
                                         </div>
                                         <button id="submit-dog" class="btn btn-primary float-right">Submit</button>
                                     </form>
-                                    <h3>Dogs:</h3>
-                                    <ul id="dog-list" class="list-group">
-                                        {{#each dogs}}
-                                        <li data-id="{{this.id}}" class="list-group-item">
-                                            <a href="dog/{{this.id}}">{{this.dogName}}</a>
-                                        </li>
-                                        {{/each}}
-                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -77,13 +69,16 @@
                     <!-- Modal content -->
                     <div class="modal-diary">
                         <span class="close1">&times;</span>
-                        <h5 align="center">Fido's Doggy Diary!</h5>
+                        <h5 align="center">Your Dog's Diary!</h5>
                         <hr>
-                        <!--BUTTON: horoscope-->
-                        <INPUT type="submit" id="button_horoscope" value="View Diary"></button>
-
-                        <!--BUTTON: diary input form-->
-                        <INPUT type="submit" id="button_diary" value="Add New Entry"></button>
+                        <h3>Dogs:</h3>
+                        <ul id="dog-list" class="list-group">
+                            {{#each dogs}}
+                            <li data-id="{{this.id}}" class="list-group-item">
+                                <a href="dog/{{this.id}}">{{this.dogName}}</a>
+                            </li>
+                            {{/each}}
+                        </ul>
                     </div>
                 </div>
                 {{!-- end Diary Modal --}}
