--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md">
 
-                <img id="doghouse" src="images/doghouse.png" />
+                <img id="doghouse" src="doghouse.png" />
 
             </div>
 
