Updated info page to match rest of app

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -245,3 +245,15 @@ hr {
   font-size: 30px;
 
 }
+
+#dog-name {
+  font-size: 70px;
+}
+
+#dog-birthday {
+  font-size: 30px;
+}
+
+#dog-sex {
+  font-size: 30px;
+}
